--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-
+kaan-bot
+dist/
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
